# deepseek-ocr-pdf2md

./: .gitignore  .gitmodules  AGENTS.md  DeepSeek-OCR_paper.md  README.md  main.py  ocr_settings.py  ocr_settings.toml  pyproject.toml
deepseek_pdf2md/: __init__.py  cli.py  inference.py  markdown_utils.py  ocr_settings.py  pdf_utils.py  pipeline.py
outputs/docs/: DeepSeek-OCR_paper.md
